{
    "name": "CheatsInputs",
    "maps": [
        {
            "name": "Cheats",
            "id": "e841a442-25d4-4b95-a750-4201ff67964d",
            "actions": [
                {
                    "name": "Scene1",
                    "type": "Button",
                    "id": "22e1388b-0f64-4bf7-bde6-8b0f0b9441c1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scene2",
                    "type": "Button",
                    "id": "a54fa48d-5ab2-46a2-b1bb-90313a66c4eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scene3",
                    "type": "Button",
                    "id": "2eec37c2-22a5-4061-9c9d-d38ae7621106",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scene4",
                    "type": "Button",
                    "id": "3acccdb8-d28d-4d1b-b8d3-390cd8a5bfbe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InfinityJump",
                    "type": "Button",
                    "id": "2e89a58f-c841-4624-a8b3-db49a67a9cc2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Imortal",
                    "type": "Button",
                    "id": "87dc1408-def1-48c2-91e4-5ba3f996c116",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b517280-b3ed-475f-8e8d-be6258f544de",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Trigger_DpadLeft",
                    "id": "f672784c-b28e-422f-bf2b-fc48188f0a38",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "ba424dff-640b-4496-9e9c-640f677ca82f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "8e0a1a2b-a0ca-4582-a910-45d7de57697a",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "efc6f5f6-2603-4de7-9c0d-82830cf0f145",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Trigger_DpadUp",
                    "id": "6f3841fb-53dd-4d71-b731-61dd3e2f8764",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "c6c83832-772f-44c8-b074-befdaf686bba",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "7e20188a-553c-49f5-84d3-9383c5a1cacd",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b4cfebdc-a3ff-468d-86ec-1f20f83a03de",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Trigger_DpadRight",
                    "id": "64ad1d29-2680-4397-8271-24e2a4c40035",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene3",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "643be311-bd63-444c-bdf7-dcfdabd35cc6",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "46cc8a5b-cf36-470f-9873-819b5b2aa7f9",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "62d03109-eb5f-44b9-8bfe-59956f302d08",
                    "path": "<Keyboard>/f4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Trigger_DpadDown",
                    "id": "a03f855d-95bb-4399-af56-b7b71a47d377",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene4",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "7516bb33-65c0-410c-b251-ec9c9eb7e6de",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene4",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "88293a1d-ee73-4d24-8026-f68e6c4dc8bd",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene4",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3fba65e8-bb86-4b6a-bea1-12f272d1114b",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InfinityJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Trigger_LeftShouder",
                    "id": "b6ee77e8-18a4-4d33-b972-03d5e356dff7",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InfinityJump",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "dea0134c-6d3c-4f7f-883b-44780d13fd5f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InfinityJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e47af98f-32b1-4ace-9aed-9aed2187e11e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InfinityJump",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "75679ce0-1e68-44d8-87f4-e4a8a51e53af",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Imortal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Trigger_RightShouder",
                    "id": "6b4d81f5-9aaa-403f-af13-15248d3a28e2",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Imortal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "b74d2b99-b3c0-4c36-8000-6c2b6c7359f2",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Imortal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "68bcca18-accc-4900-b823-b1ad26f0ce3c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Imortal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}